...
// View
import { Comment } from './comment';
import { Comments } from './comments';
import { PostComments } from './postComments';
import { CommentsModal } from './commentsModal';
import { LeaderBoard } from './leaderboard';
import { Notification } from './notification';
import { WalletHeader } from './walletHeader';
import { Transaction } from './transaction';
import { VotersDisplay } from './votersDisplay';
import { Wallet } from './wallet';
import { WalletDetails } from './walletDetails';
import Profile from './profile/profileView';
import Promote from './promote/promoteView';
import { SpinGame } from './spinGame/spinGameView';
import { TabbedPosts } from './tabbedPosts';
import { ActionModal } from './actionModal';
...
